WIP: xrCore/memory_allocation_stats ported to posix.
All WIP commits will be squashed and rebased at some point in future.

--- a/src/xrCore/CMakeLists.txt
+++ b/src/xrCore/CMakeLists.txt
@@ -25,7 +25,7 @@ SET(SOURCES
 #    log.cpp
 #    lzo1x_d3.cpp
     lzo_compressor.cpp
-#    memory_allocation_stats.cpp
+    memory_allocation_stats.cpp
 #    memory_monitor.cpp
 #    memory_usage.cpp
 #    os_clipboard.cpp
