Add xrCore/xrsharedmem.cpp to build

--- a/src/xrCore/CMakeLists.txt
+++ b/src/xrCore/CMakeLists.txt
@@ -57,7 +57,7 @@ SET(SOURCES
 #    xrSyncronize.cpp
 #    xr_shared.cpp
     xr_trims.cpp
-#    xrsharedmem.cpp
+    xrsharedmem.cpp
     xrstring.cpp
 )
 
