Add required libtheora-dev package

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_install:
     - if [ "$CXX" = "g++" ]; then sudo apt-get -qq update; fi
     - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
     - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
+    - sudo apt-get install libtheora-dev
 
 before_script:
   - cd src
