--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-## sudo is required to install gcc-4.8
+dist: trusty
 sudo: required
 
 language: cpp
@@ -8,12 +8,8 @@ compiler:
   - gcc
 
 before_install:
-    ## TODO: drop this once travis updates gcc to 4.8
-    - if [ "$CXX" = "g++" ]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; fi
-    - if [ "$CXX" = "g++" ]; then sudo apt-get -qq update; fi
-    - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
-    - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
-    - sudo apt-get install libtheora-dev
+    - sudo apt-get -qq update
+    - sudo apt-get install -y libtheora-dev
 
 before_script:
   - cd src
