--- a/src/xrCore/CMakeLists.txt
+++ b/src/xrCore/CMakeLists.txt
@@ -260,8 +260,12 @@ add_library(xrCore SHARED ${SOURCES}  ${HEADERS}
     ${THREADING_SOURCES}
 )
 
-target_link_libraries(xrCore ${SDL2_LIBRARIES})
-
 include_directories(${CMAKE_SOURCE_DIR})
+
+include_directories(${OPENSSL_INCLUDE_DIR})
+
+target_link_libraries(xrCore ${SDL2_LIBRARIES})
+target_link_libraries(xrCore ${OPENSSL_LIBRARIES})
+
 
 include_directories(".")
