--- a/src/xrEngine/CMakeLists.txt
+++ b/src/xrEngine/CMakeLists.txt
@@ -1,44 +1,44 @@
 SET(SOURCES
-#    CameraBase.cpp
-#    CameraManager.cpp
-#    CustomHUD.cpp
+    CameraBase.cpp
+    CameraManager.cpp
+    CustomHUD.cpp
 #    Device_Initialize.cpp
-#    Device_Misc.cpp
-#    Device_create.cpp
+    Device_Misc.cpp
+    Device_create.cpp
 #    Device_destroy.cpp
-#    Device_overdraw.cpp
+    Device_overdraw.cpp
 #    Device_wndproc.cpp
-#    Effector.cpp
-#    EffectorPP.cpp
-#    Engine.cpp
+    Effector.cpp
+    EffectorPP.cpp
+    Engine.cpp
 #    EngineAPI.cpp
-#    Environment.cpp
+    Environment.cpp
 #    Environment_misc.cpp
-#    Environment_render.cpp
+    Environment_render.cpp
     EventAPI.cpp
 #    FDemoPlay.cpp
 #    FDemoRecord.cpp
-#    Feel_Touch.cpp
-#    Feel_Vision.cpp
-#    GameFont.cpp
+    Feel_Touch.cpp
+    Feel_Vision.cpp
+    GameFont.cpp
 #    GameMtlLib.cpp
 #    GameMtlLib_Engine.cpp
-#    ICollidable.cpp
-#    IGame_Level.cpp
+    ICollidable.cpp
+    IGame_Level.cpp
 #    IGame_Level_check_textures.cpp
-#    IGame_ObjectPool.cpp
-#    IGame_Persistent.cpp
+    IGame_ObjectPool.cpp
+    IGame_Persistent.cpp
 #    IInputReceiver.cpp
     IRenderable.cpp
     ISheduled.cpp
-#    LightAnimLibrary.cpp
-#    ObjectAnimator.cpp
-#    ObjectDump.cpp
-#    PS_instance.cpp
-#    PerformanceAlert.cpp
-#    Rain.cpp
-#    Render.cpp
-#    StatGraph.cpp
+    LightAnimLibrary.cpp
+    ObjectAnimator.cpp
+    ObjectDump.cpp
+    PS_instance.cpp
+    PerformanceAlert.cpp
+    Rain.cpp
+    Render.cpp
+    StatGraph.cpp
 #    Stats.cpp
 #    Text_Console.cpp
 #    Text_Console_WndProc.cpp
@@ -48,7 +48,7 @@ SET(SOURCES
 #    XR_IOConsole_get.cpp
 #    Xr_input.cpp
 #    cf_dynamic_mesh.cpp
-#    defines.cpp
+    defines.cpp
 #    device.cpp
 #    edit_actions.cpp
 #    editor_environment_ambients_ambient.cpp
@@ -81,24 +81,24 @@ SET(SOURCES
 #    engine_impl.cpp
 #    line_edit_control.cpp
 #    line_editor.cpp
-#    mailSlot.cpp
-#    perlin.cpp
-#    phdebug.cpp
-#    pure.cpp
-#    pure_relcase.cpp
+    mailSlot.cpp
+    perlin.cpp
+    phdebug.cpp
+    pure.cpp
+    pure_relcase.cpp
 #    stdafx.cpp
-#    thunderbolt.cpp
+    thunderbolt.cpp
 #    tntQAVI.cpp
 #    x_ray.cpp
-#    xrHemisphere.cpp
-#    xrImage_Resampler.cpp
+    xrHemisphere.cpp
+    xrImage_Resampler.cpp
 #    xrLoadSurface.cpp
 #    xrSASH.cpp
     xrSheduler.cpp
     xrTheora_Stream.cpp
     xrTheora_Surface.cpp
 #    xrTheora_Surface_mmx.cpp
-#    xr_collide_form.cpp
+    xr_collide_form.cpp
 #    xr_efflensflare.cpp
 #    xr_input_xinput.cpp
 #    xr_ioc_cmd.cpp
