Trash in progress.

--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -2,3 +2,7 @@
 #add_subdirectory(xrCompress)
 
 add_subdirectory(ctool)
+#add_subdirectory(mp_balancer)
+#add_subdirectory(mp_gpprof_server)
+add_subdirectory(mp_configs_verifyer)
+add_subdirectory(mp_screenshots_info)
