--- a/src/xrCore/CMakeLists.txt
+++ b/src/xrCore/CMakeLists.txt
@@ -1,53 +1,53 @@
 SET(SOURCES
-    FMesh.cpp
-#    FS.cpp
+#    FMesh.cpp
+    FS.cpp
     FTimer.cpp
-#    FileSystem.cpp
+    FileSystem.cpp
 #    FileSystem_borland.cpp
-#    LocatorAPI.cpp
+    LocatorAPI.cpp
     LocatorAPI_auth.cpp
-#    LocatorAPI_defs.cpp
-#    LzHuf.cpp
+    LocatorAPI_defs.cpp
+    LzHuf.cpp
     Model.cpp
     NET_utils.cpp
     Xr_ini.cpp
     _compressed_normal.cpp
-#    _math.cpp
+    _math.cpp
     _sphere.cpp
 #    _std_extensions.cpp
-#    clsid.cpp
-#    cpuid.cpp
+    clsid.cpp
+    cpuid.cpp
     crc32.cpp
     doug_lea_allocator.cpp
     dump_string.cpp
-#    file_stream_reader.cpp
-#    log.cpp
+    file_stream_reader.cpp
+    log.cpp
 #    lzo1x_d3.cpp
     lzo_compressor.cpp
     memory_allocation_stats.cpp
     memory_monitor.cpp
-#    memory_usage.cpp
+    memory_usage.cpp
     os_clipboard.cpp
-#    ppmd_compressor.cpp
-#    rt_compressor.cpp
-#    rt_compressor9.cpp
-#    rt_lzo.cpp
+    ppmd_compressor.cpp
+    rt_compressor.cpp
+    rt_compressor9.cpp
+    rt_lzo.cpp
 #    rt_lzo1x_1.cpp
-#    rt_lzo1x_9x.cpp
+    rt_lzo1x_9x.cpp
 #    rt_lzo1x_d1.cpp
 #    rt_lzo1x_d2.cpp
 #    rt_lzo1x_d3.cpp
 #    rt_lzo_init.cpp
     stdafx.cpp
-#    stream_reader.cpp
+    stream_reader.cpp
     string_concatenations.cpp
-#    xrCore.cpp
-#    xrDebugNew.cpp
+    xrCore.cpp
+    xrDebugNew.cpp
     xrMemory.cpp
     xrMemory_POOL.cpp
-#    xrMemory_align.cpp
+    xrMemory_align.cpp
 #    xrMemory_debug.cpp
-#    xrMemory_pso_Copy.cpp
+    xrMemory_pso_Copy.cpp
     xrMemory_pso_Fill.cpp
     xrMemory_pso_Fill32.cpp
 #    xrMemory_subst_borland.cpp
@@ -136,9 +136,9 @@ set(TEXT_HEADERS
 )
 
 set(THREADING_SOURCES
-#    Threading/Event.cpp
+    Threading/Event.cpp
     Threading/Lock.cpp
-#    Threading/ttapi.cpp
+    Threading/ttapi.cpp
 )
 
 set(THREADING_HEADERS
@@ -249,6 +249,7 @@ SET(HEADERS
     xrsharedmem.h
     xrstring.h
 )
+   
 
 add_library(xrCore SHARED ${SOURCES}  ${HEADERS}
     ${ANIMATION_SOURCES}
@@ -266,6 +267,8 @@ include_directories(${OPENSSL_INCLUDE_DIR})
 
 target_link_libraries(xrCore ${SDL2_LIBRARIES})
 target_link_libraries(xrCore ${OPENSSL_LIBRARIES})
+
+target_link_libraries(xrCore -llzo2)
 
 
 include_directories(".")
