--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ compiler:
 
 before_install:
     - sudo apt-get -qq update
-    - sudo apt-get install -y --no-install-recommends libsdl2-dev libtheora-dev
+    - sudo apt-get install -y --no-install-recommends libsdl2-dev libtheora-dev liblzo2-dev
 
 before_script:
   - cd src
