--- a/src/xrEngine/CMakeLists.txt
+++ b/src/xrEngine/CMakeLists.txt
@@ -13,7 +13,7 @@ SET(SOURCES
     Engine.cpp
 #    EngineAPI.cpp
     Environment.cpp
-#    Environment_misc.cpp
+    Environment_misc.cpp
     Environment_render.cpp
     EventAPI.cpp
 #    FDemoPlay.cpp
@@ -47,52 +47,22 @@ SET(SOURCES
 #    XR_IOConsole_control.cpp
 #    XR_IOConsole_get.cpp
 #    Xr_input.cpp
-#    cf_dynamic_mesh.cpp
+    cf_dynamic_mesh.cpp
     defines.cpp
 #    device.cpp
-#    edit_actions.cpp
-#    editor_environment_ambients_ambient.cpp
-#    editor_environment_ambients_effect_id.cpp
-#    editor_environment_ambients_manager.cpp
-#    editor_environment_ambients_sound_id.cpp
-#    editor_environment_detail.cpp
-#    editor_environment_effects_effect.cpp
-#    editor_environment_effects_manager.cpp
-#    editor_environment_levels_manager.cpp
-#    editor_environment_manager.cpp
-#    editor_environment_manager_properties.cpp
-#    editor_environment_sound_channels_channel.cpp
-#    editor_environment_sound_channels_manager.cpp
-#    editor_environment_sound_channels_source.cpp
-#    editor_environment_suns_blend.cpp
-#    editor_environment_suns_flare.cpp
-#    editor_environment_suns_flares.cpp
-#    editor_environment_suns_gradient.cpp
-#    editor_environment_suns_manager.cpp
-#    editor_environment_suns_sun.cpp
-#    editor_environment_thunderbolts_collection.cpp
-#    editor_environment_thunderbolts_gradient.cpp
-#    editor_environment_thunderbolts_manager.cpp
-#    editor_environment_thunderbolts_thunderbolt.cpp
-#    editor_environment_thunderbolts_thunderbolt_id.cpp
-#    editor_environment_weathers_manager.cpp
-#    editor_environment_weathers_time.cpp
-#    editor_environment_weathers_weather.cpp
 #    engine_impl.cpp
-#    line_edit_control.cpp
-#    line_editor.cpp
     mailSlot.cpp
     perlin.cpp
     phdebug.cpp
     pure.cpp
     pure_relcase.cpp
-#    stdafx.cpp
+    stdafx.cpp
     thunderbolt.cpp
 #    tntQAVI.cpp
 #    x_ray.cpp
     xrHemisphere.cpp
     xrImage_Resampler.cpp
-#    xrLoadSurface.cpp
+    xrLoadSurface.cpp
 #    xrSASH.cpp
     xrSheduler.cpp
     xrTheora_Stream.cpp
@@ -102,8 +72,8 @@ SET(SOURCES
 #    xr_efflensflare.cpp
 #    xr_input_xinput.cpp
 #    xr_ioc_cmd.cpp
-#    xr_object.cpp
-#    xr_object_list.cpp
+    xr_object.cpp
+    xr_object_list.cpp
 )
 
 SET(HEADERS
